src/components/singleproduct/singleproduct.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');


.product-grid{
    background-color: #fff;
    font-family: 'Montserrat', sans-serif;
    text-align: center;
    width: 100%;
    padding: 10px ;
}
.product-grid .product-image{
    overflow: hidden;
    position: relative;
    height: 250px;
	width: 250px;
}
.product-grid .product-image a.image{ display: block; }
.product-grid .product-image img{
    width: 100%;
    height: fit-content;
}
.product-grid .product-image .pic-1{ transition: all 0.3s ease 0s; }
.product-grid .product-image:hover .pic-1{ transform: translateX(100%); }
.product-grid .product-image .pic-2{
    width: 100%;
    height: 80%;
    transform: translateX(-101%);
    position: absolute;
    top: 0;
    left: 0;
    transition: all 0.3s ease 0s;
}
.product-grid .product-image:hover .pic-2{ transform: translateX(0); }
.product-grid .product-sale-label{
    color: #fff;
    background: #0a805e;
    font-size: 13px;
    text-transform: uppercase;
    letter-spacing: 1px;
    padding: 2px 8px;
    position: absolute;
    top: 15px;
    left: 15px;
}
.product-grid .product-like-icon{
    color: #696969;
    font-size: 22px;
    line-height: 20px;
    position: absolute;
    top: 15px;
    right: 15px;
}
.product-grid .product-like-icon:hover{ color: #0a805e; }
.product-grid .product-like-icon:before,
.product-grid .product-like-icon:after{
    content: attr(data-tip);
    color: #fff;
    background-color: #000;
    font-size: 12px;
    line-height: 18px;
    padding: 7px 7px 5px;
    visibility: hidden;
    position: absolute;
    right: 0;
    top: 15px;
    transition: all 0.3s ease 0s;
}
.product-grid .product-like-icon:after{
    content: '';
    height: 15px;
    width: 15px;
    padding: 0;
    transform: translateX(-50%) rotate(45deg);
    right: auto;
    left: 50%;
    top: 15px;
    z-index: -1;
}
.product-grid .product-like-icon:hover:before,
.product-grid .product-like-icon:hover:after{
    visibility: visible;
    top: 30px;
}
.product-grid .product-links{
    width: 170px;
    padding: 0;
    margin: 0;
    list-style: none;
    opacity: 0;
    transform: translateX(-50%);
    position: absolute;
    bottom: -50px;
    left: 50%;
    transition: all 0.3s ease 0s;
}
.product-grid:hover .product-links{
    bottom: 40px;
    opacity: 1;
}
.product-grid .product-links li{
    display: inline-block;
    margin: 0 2px;
}
.product-grid .product-links li a{
    color: #fff;
    background: #000;
    font-size: 16px;
    line-height: 48px;
    width: 48px;
    height: 48px;
    border-radius: 10px;
    display: block;
    transition: all 0.3s ease 0s;
}
.product-grid:hover .product-links li a:hover{ background: #333; }
.product-grid .product-content{
    text-align: left;
    padding: 15px 0 0;
}
.product-grid .title{
    font-size: 14px;
    font-weight: 500;
    text-transform: capitalize;
    margin: 0 0 8px;
}
.product-grid .title a{
    color: #333;
    transition: all 0.3s ease 0s;
}
.product-grid .title a:hover{ color: #0a805e; }
.product-grid .price{
    color: #0a805e;
    font-size: 16px;
    font-weight: 500;
}
.product-grid .price span{
    color: #555;
    font-size: 14px;
    font-weight: 400;
    text-decoration: line-through;
    margin: 0 5px 0 0;
}
.custom-cart-style{
    max-height: 375px;
}
@media screen and (max-width: 990px){
    .product-grid{ margin: 0 0 30px; }
}

@media screen and (max-width: 756px){
    .custom-cart-style{
        flex-basis: 33.33%;
    }
}

@media screen and (max-width:603px){
    .product-grid .product-image{
        height: 180px;
        width: 200px;
    }
}

@media screen and (max-width:550px){
    .product-grid .product-image{
        height: 180px;
        width: 180px;
    }
}

@media screen and (max-width: 500px){
    .product-grid .product-image{
        height: 160px;
        width: 160px;
    }
}
@media screen and (max-width: 450px){
    .product-grid .product-image{
        height: 140px;
        width: 140px;
    }
}
@media screen and (max-width: 375px){
    .product-grid .product-image{
        height: 130px;
        width: 130px;
    }
}
@media screen and (max-width: 364px){
    .product-grid .product-image{
        height: 120px;
        width: 120px;
    }
}
@media screen and (max-width: 354px){
    .product-grid .product-image{
        height: 120px;
        width: 110px;
    }
}
@media screen and (max-width: 335px){
    .product-grid .product-image{
        height: 250px;
        width: 250px;
    }
}

